Contenu statique des pages astro

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,9 +1,9 @@
 ---
-import Logo from "../assets/images/logo.svg";
-import InstaLogo from "../assets/images/instagram.svg";
-import TwitterLogo from "../assets/images/twitter.svg";
-import FacebookLogo from "../assets/images/facebook.svg";
-import YoutubeLogo from "../assets/images/youtube.svg";
+import Logo from "../assets/icons/logo.svg";
+import InstaLogo from "../assets/icons/instagram.svg";
+import TwitterLogo from "../assets/icons/twitter.svg";
+import FacebookLogo from "../assets/icons/facebook.svg";
+import YoutubeLogo from "../assets/icons/youtube.svg";
 ---
 
 <footer class="bg-sky-950 text-white p-4">
