--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,9 +1,9 @@
 ---
-import Logo from "../assets/images/logo.svg";
+import Logo from "../assets/icons/logo.svg";
 ---
 
 <header
-    class="flex w-full justify-between items-center p-4 pl-10 pr-10 w-100 bg-sky-950 text-white"
+    class="flex w-full justify-between items-center p-4 pl-10 pr-10 bg-sky-950 text-white"
 >
     <a href="/">
         <Logo />
@@ -18,9 +18,7 @@ import Logo from "../assets/images/logo.svg";
         <span
             class="group-aria-expanded:rotate-225 group-aria-expanded:translate-y-2"
         ></span>
-        <span
-            class="group-aria-expanded:rotate-135"
-        ></span>
+        <span class="group-aria-expanded:rotate-135"></span>
         <span
             class="group-aria-expanded:rotate-225 group-aria-expanded:-translate-y-2"
         ></span>
@@ -32,7 +30,7 @@ import Logo from "../assets/images/logo.svg";
     >
         <a href="/programmation">Programmation</a>
         <span class="mb-8 block h-0.5 bg-white"></span>
-        <a href="/billeterie">Billetterie</a>
+        <a href="/billetterie">Billetterie</a>
         <span class="mb-8 block h-0.5 bg-white"></span>
         <a href="/activites">Activités</a>
         <span class="mb-8 block h-0.5 bg-white"></span>
