--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -29,17 +29,22 @@ import YoutubeColored from "../assets/icons/youtube_colored.svg";
         </div>
         <div><h1>Formulaire</h1></div>
     </section>
-    <section>
-        <div>
-            <h3>Nos réseaux sociaux :</h3>
-            <div class="flex justify-center gap-10 scale-120 align-center">
-                <div class="flex flex-col justify-center"><FacebookColored /><p>Facebook</p></div>
-                <div class="flex flex-col justify-center"><InstaColored /><p>Instagram</p></div>
-                <div class="flex flex-col justify-center"><TwitterColored /><p>Twitter</p></div>
-                <div class="flex flex-col justify-center"><YoutubeColored /><p>Youtube</p></div>
 
-               
+    <div class="mx-8">
+        <h3>Nos réseaux sociaux :</h3>
+        <div class="flex justify-between py-4">
+            <div class="flex flex-col justify-center items-center">
+                <FacebookColored /><p>Facebook</p>
+            </div>
+            <div class="flex flex-col align- justify-center items-center">
+                <InstaColored /><p>Instagram</p>
+            </div>
+            <div class="flex flex-col justify-center items-center">
+                <TwitterColored /><p>Twitter</p>
+            </div>
+            <div class="flex flex-col justify-center items-center">
+                <YoutubeColored /><p>Youtube</p>
             </div>
         </div>
-    </section></Layout
->
+    </div>
+</Layout>
