--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -28,11 +28,85 @@ import Layout from "../layouts/Layout.astro";
 			</button>
 		</div>
 		<section>
-			<div>
-				<img src="" alt="" /><button
-					class="uppercase bg-orange-400 rounded-xl p-3"
-					><a href="/programmation">Programmation</a></button
-				>
+			<div class="flex flex-col gap-12">
+				<div>
+					<img
+						class="rounded-lg"
+						src="./src/assets/images/prog_accueil.avif"
+						alt=""
+					/>
+					<div class="flex justify-end">
+						<button
+							class="relative -mt-4 -mr-2 uppercase bg-orange-400 rounded-xl p-3"
+							><a href="/programmation">Programmation</a></button
+						>
+					</div>
+				</div>
+				<div>
+					<img
+						class="rounded-lg"
+						src="./src/assets/images/invites_accueil.avif"
+						alt=""
+					/>
+					<div class="flex justify-end">
+						<button
+							class="relative -mt-4 -mr-2 uppercase bg-orange-400 rounded-xl p-3"
+							><a href="/invites">Nos Invités</a></button
+						>
+					</div>
+				</div>
+				<div>
+					<img
+						class="rounded-lg"
+						src="./src/assets/images/activites_accueil.avif"
+						alt=""
+					/>
+					<div class="flex justify-end">
+						<button
+							class="relative -mt-4 -mr-2 uppercase bg-orange-400 rounded-xl p-3"
+							><a href="/activites">Activités</a></button
+						>
+					</div>
+				</div>
+				<div>
+					<img
+						class="rounded-lg"
+						src="./src/assets/images/infos_accueil.avif"
+						alt=""
+					/>
+					<div class="flex justify-end">
+						<button
+							class="relative -mt-4 -mr-2 uppercase bg-orange-400 rounded-xl p-3"
+							><a href="/infos">Infos Pratiques</a></button
+						>
+					</div>
+				</div>
+				<div>
+					<img
+						class="rounded-lg"
+						src="./src/assets/images/about_accueil.avif"
+						alt=""
+					/>
+					<div class="flex justify-end">
+						<button
+							class="relative -mt-4 -mr-2 uppercase bg-orange-400 rounded-xl p-3"
+							><a href="/about">À propos</a></button
+						>
+					</div>
+				</div>
+				<div>
+					<img
+						class="rounded-lg"
+						src="./src/assets/images/contact_accueil.avif"
+						alt=""
+					/>
+					<div class="flex justify-end">
+						<button
+							class="relative -mt-4 -mr-2 uppercase bg-orange-400 rounded-xl p-3"
+							><a href="/contact">Contact</a></button
+						>
+					</div>
+				</div>
 			</div>
 		</section>
 		<section>
