--- a/src/pages/invites/index.astro
+++ b/src/pages/invites/index.astro
@@ -4,12 +4,10 @@ import Layout from "../../layouts/Layout.astro";
 
 <Layout>
     <body>
-        <section>
-            <div>
-                <h1>Nos Invités</h1>
-                <img src="" alt="" />
-            </div>
-        </section>
+        <div class="flex justify-center">
+            <h1 class="absolute text-white pt-8">Nos Invités</h1>
+            <img src="./src/assets/images/hero_invites.avif" alt="" />
+        </div>
         <section>
             <div>
                 <h2>
