--- a/src/pages/programmation/index.astro
+++ b/src/pages/programmation/index.astro
@@ -4,11 +4,11 @@ import Layout from "../../layouts/Layout.astro";
 
 <Layout>
     <body>
+        <div class="flex justify-center">
+            <h1 class="absolute pt-12">Programmation</h1>
+            <img src="./src/assets/images/hero_prog.avif" alt="" />
+        </div>
         <section>
-            <div>
-                <h1>Programmation</h1>
-                <img src="" alt="" />
-            </div>
             <div>
                 <h2>
                     Voici la liste des films choisis par nos soins pour une
@@ -16,6 +16,7 @@ import Layout from "../../layouts/Layout.astro";
                 </h2>
             </div>
         </section>
+
         <section>
             <div>
                 <h3>Programmation du 8 Août</h3>
@@ -95,7 +96,9 @@ import Layout from "../../layouts/Layout.astro";
                 </ul>
                 <figure>
                     <img src="./src/assets/images/musee.avif" alt="" />
-                    <figcaption class="flex justify-center">Musée Gustave Courbet</figcaption>
+                    <figcaption class="flex justify-center">
+                        Musée Gustave Courbet
+                    </figcaption>
                 </figure>
             </div>
         </section>
