--- a/src/pages/billetterie.astro
+++ b/src/pages/billetterie.astro
@@ -4,8 +4,8 @@ import Layout from "../layouts/Layout.astro";
 
 <Layout>
     <section>
-        <h1>Billeterie</h1>
-        <img src="" alt="" />
+        <h1 class="flex justify-center">Billeterie</h1>
+        <img src="./src/assets/images/hero_billetterie.avif" alt="" />
     </section>
     <section>
         <h2>Comment assister au festival ?</h2>
