--- a/src/pages/infos.astro
+++ b/src/pages/infos.astro
@@ -3,16 +3,15 @@ import Layout from "../layouts/Layout.astro";
 ---
 
 <Layout>
-    <section>
-        <div>
-            <h1>Informations pratiques</h1>
-            <img src="" alt="" />
-        </div>
-    </section>
+    <div class="flex justify-center">
+        <h1 class="absolute pt-68 w-50 text-center">Informations pratiques</h1>
+        <img src="./src/assets/images/hero_infos.avif" alt="" />
+    </div>
+
     <section>
         <div>
             <h3>Tarifs</h3>
-            <ul>
+            <ul class="flex flex-col gap-2">
                 <li><p>Billet simple : 7€ (accès à une projection)</p></li>
                 <li>
                     <p>
@@ -28,19 +27,23 @@ import Layout from "../layouts/Layout.astro";
                 </li>
                 <li>
                     <p>Réductions :</p>
-                    <li>
+                    <li class="pl-6">
                         <p>
-                            Étudiants, demandeurs d'emploi, moins de 18 ans : 5€
-                            (sur présentation d'un justificatif)
+                            - Étudiants, demandeurs d'emploi, moins de 18 ans :
+                            5€ (sur présentation d'un justificatif)
                         </p>
                     </li>
-                    <li>
-                        Tarif groupe (à partir de 10 personnes) : 6€ par
+                    <li class="pl-6">
+                        - Tarif groupe (à partir de 10 personnes) : 6€ par
                         personne pour les projections.
                     </li>
                 </li>
             </ul>
-            <img src="" alt="" />
+            <img
+                class="-mb-6"
+                src="./src/assets/images/hero_billetterie.avif"
+                alt=""
+            />
         </div>
     </section>
     <section>
@@ -50,24 +53,28 @@ import Layout from "../layouts/Layout.astro";
                 Le festival se déroulera à Ornans, avec des projections dans
                 plusieurs lieux emblématiques :
             </p>
-            <ul>
+            <ul class="flex flex-col gap-2">
                 <li>
                     Cinéma de la Ville d'Ornans : 10 Place de l'Hôtel de Ville,
                     25290 Ornans.
-                    <li>
-                        Salle principale pour les projections et événements.
+                    <li class="pl-6">
+                        - Salle principale pour les projections et événements.
                     </li>
                 </li>
                 <li>
                     Salle Saint Vernier : 5 Rue de la Liberté, 25290 Ornans
-                    <li>Accueil des masterclasses et ateliers.</li>
+                    <li class="pl-6">
+                        - Accueil des masterclasses et ateliers.
+                    </li>
                 </li>
                 <li>
                     Place Courbet : 25290 Ornans
-                    <li>Projections en plein air (en fonction de la météo).</li>
+                    <li class="pl-6">
+                        - Projections en plein air (en fonction de la météo).
+                    </li>
                 </li>
             </ul>
-            <p>
+            <p class="py-6">
                 Des cartes des lieux seront disponibles à l'entrée des salles,
                 ainsi que sur le site internet du festival.
             </p>
@@ -77,7 +84,7 @@ import Layout from "../layouts/Layout.astro";
     <section>
         <div>
             <h3>Hébergements</h3>
-            <ul>
+            <ul class="flex flex-col gap-2">
                 <li>
                     Hôtels :
                     <li>
@@ -97,7 +104,7 @@ import Layout from "../layouts/Layout.astro";
     <section>
         <div>
             <h3>Transports</h3>
-            <ul>
+            <ul class="flex flex-col gap-2">
                 <li>
                     En train : La gare de Besançon est à 30 minutes en train de
                     la gare d'Ornans. Des navettes gratuites seront disponibles
@@ -117,16 +124,18 @@ import Layout from "../layouts/Layout.astro";
             </ul>
         </div>
         <div>
-            <figure>
-                <img src="" alt="" />
-                <figcaption>Gare d'Ornans</figcaption>
+            <figure class="py-4">
+                <img src="./src/assets/images/gare_ornans.avif" alt="" />
+                <figcaption class="flex justify-center">
+                    Gare d'Ornans
+                </figcaption>
             </figure>
         </div>
         <div><h1>API MAPS ?</h1></div>
     </section>
     <section>
         <h3>Questions fréquentes</h3>
-        <ul>
+        <ul class="flex flex-col gap-2">
             <li>
                 Où se déroule le festival ? Le festival Flash Cinéma 25 se tient
                 à Ornans (25290), dans plusieurs lieux emblématiques de la
@@ -170,7 +179,7 @@ import Layout from "../layouts/Layout.astro";
                 pour les mises à jour.
             </li>
             <li>
-                Où puis-je acheter mes billets ?Les billets sont disponibles en
+                Où puis-je acheter mes billets ? Les billets sont disponibles en
                 ligne et sur place (dans la limite des places disponibles).
             </li>
         </ul>
