pages activités dynamiques

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -6,7 +6,7 @@ import FacebookLogo from "../assets/icons/facebook.svg";
 import YoutubeLogo from "../assets/icons/youtube.svg";
 ---
 
-<footer class="bg-sky-950 text-white p-4">
+<footer class="bg-sky-950 text-white p-4 mt-12">
     <div class="flex items-center">
         <Logo />
         <div class="ml-4">
