--- a/src/pages/invites/index.astro
+++ b/src/pages/invites/index.astro
@@ -1,5 +1,6 @@
 ---
 import Layout from "../../layouts/Layout.astro";
+import CardInvite from "../../components/CardInvite.astro";
 ---
 
 <Layout>
@@ -21,6 +22,11 @@ import Layout from "../../layouts/Layout.astro";
                     aperçu de son parcours et ses contributions au festival.
                     Cliquez sur leur profil pour en savoir plus !
                 </p>
+            </div>
+        </section>
+        <section>
+            <div>
+
             </div>
         </section>
     </body>
