--- a/src/components/CardInvite.astro
+++ b/src/components/CardInvite.astro
@@ -1,15 +1,16 @@
 ---
 import ImagePB from "./ImagePB.astro";
-const { ...Activite } = Astro.props;
+const { ...Invite } = Astro.props;
 ---
 
 <article>
-    <h3 class="pt-12 pb-0">{Activite.titre_activite}</h3>
-    <a href={`/activites/${Activite.id}`}>
+    <p class="pt-12 pb-0">{Invite.prenom_invite} {Invite.nom_invite}</p>
+    <p>{Invite.profession_invite}</p>
+    <a href={`/activites/${Invite.id}`}>
         <ImagePB
-            record={Activite}
-            field="image_activite"
-            alt={Activite.imgAlt}
+            record={Invite}
+            field="image_invite"
+            alt={Invite.imgAlt}
             classPicture="duotone col-start-1 row-start-1 col-span-2 row-span-2 group-hover:before:bg-black"
             classImg="group-hover:grayscale-0 group-hover:mix-blend-normal w-[390px] object-cover"
         />
