--- a/src/pages/activites/[id].astro
+++ b/src/pages/activites/[id].astro
@@ -1,12 +1,47 @@
 ---
-import Layout from '../../layouts/Layout.astro';
-import { Picture } from 'astro:assets';
-import { ActivityById } from '../../../backend/backend.mjs';
-import CardActivite from '../../components/CardActivite.astro';
+import Layout from "../../layouts/Layout.astro";
+import ImagePB from "../../components/ImagePB.astro";
+import { ActivityById } from "../../../backend/backend.mjs";
+import { InviteById } from "../../../backend/backend.mjs";
+import { formatDate } from "../../js/utils.js";
 const { id } = Astro.params;
-const activite = await ActivityById(id);
+const Activite = await ActivityById(id);
+const IdInvite = { id: Activite.anime };
+const Invite = await InviteById(IdInvite.id);
 ---
 
 <Layout>
-    <div></div>
+    <section>
+        <div>
+            <h2>{Activite.titre_activite}</h2>
+            <ul>
+                <li>{Activite.lieu_activite}</li>
+                <li>{formatDate(Activite.dateheure_activite)}</li>
+            </ul>
+        </div>
+    </section>
+    <div>
+        <ImagePB
+            record={Activite}
+            field="image_activite"
+            alt={Activite.imgAlt}
+            classPicture="duotone col-start-1 row-start-1 col-span-2 row-span-2 group-hover:before:bg-black"
+            classImg="group-hover:grayscale-0 group-hover:mix-blend-normal w-full object-cover"
+        />
+    </div>
+    <section class="pb-6">
+        <div set:html={Activite.description_activite} />
+    </section>
+    <section class="pt-0">
+        <h3>Invité présent</h3>
+        <ImagePB
+            record={Invite}
+            field="image_invite"
+            alt={Invite.imgAlt}
+            classPicture="duotone col-start-1 row-start-1 col-span-2 row-span-2 group-hover:before:bg-black"
+            classImg="group-hover:grayscale-0 group-hover:mix-blend-normal w-full object-cover"
+        />
+        <p class="pt-2">{Invite.prenom_invite} {Invite.nom_invite}</p>
+        <p class="text-sm font-light">{Invite.profession_invite}</p>
+    </section>
 </Layout>
