--- a/src/components/CardInvite.astro
+++ b/src/components/CardInvite.astro
@@ -4,15 +4,17 @@ const { ...Invite } = Astro.props;
 ---
 
 <article>
-    <p class="pt-12 pb-0">{Invite.prenom_invite} {Invite.nom_invite}</p>
-    <p>{Invite.profession_invite}</p>
     <a href={`/activites/${Invite.id}`}>
         <ImagePB
             record={Invite}
             field="image_invite"
             alt={Invite.imgAlt}
-            classPicture="duotone col-start-1 row-start-1 col-span-2 row-span-2 group-hover:before:bg-black"
+            classPicture="grayscale col-start-1 row-start-1 col-span-2 row-span-2 group-hover:before:bg-black"
             classImg="group-hover:grayscale-0 group-hover:mix-blend-normal w-[390px] object-cover"
         />
     </a>
+    <div>
+        <p>{Invite.prenom_invite} {Invite.nom_invite}</p>
+        <p class="pb-12 pt-0">{Invite.profession_invite}</p>
+    </div>
 </article>
