page fiche invité

--- a/src/components/CardInvite.astro
+++ b/src/components/CardInvite.astro
@@ -4,7 +4,7 @@ const { ...Invite } = Astro.props;
 ---
 
 <article>
-    <a href={`/activites/${Invite.id}`}>
+    <a href={`/invites/${Invite.id}`}>
         <ImagePB
             record={Invite}
             field="image_invite"
