--- a/src/pages/programmation/index.astro
+++ b/src/pages/programmation/index.astro
@@ -1,4 +1,5 @@
 ---
+import CarouselFilm from "../../components/CarouselFilm.astro";
 import Layout from "../../layouts/Layout.astro";
 ---
 
@@ -20,6 +21,7 @@ import Layout from "../../layouts/Layout.astro";
         <section>
             <div>
                 <h3>Programmation du 8 Août</h3>
+                <CarouselFilm/>
             </div>
             <div>
                 <h3>Programmation du 9 Août</h3>
