--- a/src/pages/programmation/index.astro
+++ b/src/pages/programmation/index.astro
@@ -20,18 +20,12 @@ import Layout from "../../layouts/Layout.astro";
 
         <section>
             <div>
-                <h3>Programmation du 8 Août</h3>
+                <h2 class="pb-4">Programmation du festival</h2>
                 <CarouselFilm/>
-            </div>
-            <div>
-                <h3>Programmation du 9 Août</h3>
-            </div>
-            <div>
-                <h3>Programmation du 10 Août</h3>
             </div>
         </section>
         <section>
-            <div>
+            <div></a>
                 <h3>Séances spéciales</h3>
                 <p>
                     Plongez dans l’univers unique du festival avec des
@@ -61,9 +55,9 @@ import Layout from "../../layouts/Layout.astro";
                         </p>
                     </li>
                 </ul>
-                <figure>
+                <figure class="pt-4 pb-4">
                     <img src="./src/assets/images/masterclass.avif" alt="" />
-                    <figcaption class="flex justify-center">
+                    <figcaption class="flex justify-center pt-2">
                         Masterclass sur l'animation
                     </figcaption>
                 </figure>
@@ -96,9 +90,9 @@ import Layout from "../../layouts/Layout.astro";
                         </p>
                     </li>
                 </ul>
-                <figure>
+                <figure class="pt-4">
                     <img src="./src/assets/images/musee.avif" alt="" />
-                    <figcaption class="flex justify-center">
+                    <figcaption class="flex justify-center pt-2">
                         Musée Gustave Courbet
                     </figcaption>
                 </figure>
